# beldex-web-wallet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: FindMonero.cmake  FindMySQL++.cmake
config/: config.json
ext/googletest/: .travis.yml
ext/restbed/cmake/: configuration.cmake
html/: beldex.json  index.html
html/css_2/: styles.css
html/js/: cn_util.js  config.js  mnemonic.js  webflow.js
html/js/controllers/: account.js  login.js  send_coins.js  version.js
html/js/lib/: mymonero-core.js
html/js/lib/mymonero_core_js/monero_utils/: MyMoneroCoreCpp_ASMJS.asm.js  MyMoneroCoreCpp_ASMJS.js  MyMoneroCoreCpp_WASM.js  MyMoneroCoreCpp_WASM.wasm
html/modals/: idle-timeout.html  idle-warning.html  imported-account.html  login.html  openalias-confirm.html  transfer-confirm.html
html/partials/: account-nav.html  account-overview.html  account-transactions.html  create-your-account.html  home.html  privacy-policy.html  receive-coins.html  send-coins.html  support.html  terms.html
sql/: openbeldex_test.sql  openloki.sql  openloki_test.sql
src/: BlockchainSetup.cpp  CMakeLists.txt  CmdLineOptions.cpp  CurrentBlockchainStatus.cpp  CurrentBlockchainStatus.h  MicroCore.cpp  MicroCore.h  RPCCalls.cpp  RPCCalls.h  RandomOutputs.cpp  TxSearch.cpp  YourMoneroRequests.cpp  monero_headers.h  tools.cpp  utils.cpp  utils.h
src/db/: ssqlses.h
tests/: bcstatus_tests.cpp
tests/res/: config_ill_formed.json
